[project]
name = "search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.121.1",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "ujson>=5.11.0",
    "uvicorn[standard]>=0.38.0",
]
